<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="clView"
            type="com.example.calldemo.fragments.call.CallViewModel" />
    </data>
<androidx.appcompat.widget.LinearLayoutCompat

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".fragments.call.CallFragment">



    <TextView
        android:id="@+id/viewno"
       android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:text="@={clView.numberAll}"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:id="@+id/no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no1"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(1))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no2"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(2))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no3"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(3))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/no4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(4))}"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no4"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no5"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(5))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no6"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(6))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/no7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no7"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(7))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
           android:id="@+id/no8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no8"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(8))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no9"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(9))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center">
        <TextView
            android:id="@+id/startxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/star1"
            android:onClick="@{()-> clView.buttonNum(@string/star1)}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
           android:id="@+id/no0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no0"
            android:onClick="@{() -> clView.buttonNum(String.valueOf(0))}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/has"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/hase"
            android:onClick="@{()-> clView.buttonNum(@string/hase)}"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

    <ImageView

        android:id="@+id/cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/cancel"
        android:onClick="@{() ->clView.cancel()"
        android:background="@drawable/custom_button"/>


</LinearLayout>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/callfloating"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="120dp"
            android:backgroundTint="@color/teal_200"
            android:src="@drawable/ic_baseline_call_24"
            tools:ignore="ContentDescription" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>