<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="clingView"
            type="com.example.calldemo.fragments.calling.CallingViewModel" />
    </data>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.calling.CallingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@{String.valueOf(clingView.score)}"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:weightSum="1"
       android:gravity="center"
        >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mute"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:src="@drawable/mute" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:text="@string/mute"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black" />




        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/keyboard"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_keyboard_24" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:text="@string/keyboard"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/speaker"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:src="@drawable/speaker" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:text="@string/speaker"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black" />




        </LinearLayout>


    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:layout_centerInParent="true"
    android:layout_marginTop="100dp"
    android:layout_margin="4dp"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addcall"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:padding="4dp"
            android:text="@string/addcall"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/facetime"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:padding="2dp"
            android:src="@drawable/facetime" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:padding="4dp"
            android:text="@string/Facetime"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_contacts_24" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:padding="4dp"
            android:text="@string/contacts"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black" />




    </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/callended"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="120dp"
            android:backgroundTint="@color/design_default_color_error"
            android:src="@drawable/ic_baseline_call_24"
            />

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>
</layout>